--- a/views/dentist_treatment_view.xml
+++ b/views/dentist_treatment_view.xml
@@ -19,7 +19,7 @@
                             <field name="duration"/>
                             <field name="cost"/>
                             <field name="notes"/>
-                            <field name="selected_teeth" widget="many2many_tags"/>
+                            <field name="selected_teeth" />
                         </group>
                     </sheet>
                 </form>
