--- a/static/src/css/tooth.css
+++ b/static/src/css/tooth.css
@@ -5,7 +5,7 @@
     margin: 0;
     background: none;
     cursor: pointer;
-    transition: all 0.2s ease;
+    transition: all 0.3s ease;
 }
 
 /* Tooth image container */
@@ -39,11 +39,30 @@
 .tooth_button:hover:not(.selected) {
     transform: scale(1.05); /* Slight scale on hover */
 }
-
 /* Selected tooth style */
 .tooth_button.selected {
-    background-color: #7c7bad52; /* Green for selected */
     color: white;
-    border: 2px solid #7c7bad52;
-    border-radius: 5px;
+    transform: none;
+    border-bottom: 6px solid #7c7bad52;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+/* Completed tooth style */
+.tooth_button.completed {
+    border-bottom: 6px solid #4caf5087;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+
+}
+
+/* In-progress tooth style */
+.tooth_button.in-progress {
+    border-bottom: 6px solid #ffa50078;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+.modal-lg{
+
+    max-width: 70% !important;
 }
