--- a/views/dentist_treatment_view.xml
+++ b/views/dentist_treatment_view.xml
@@ -17,9 +17,11 @@
                             <field name="patient_ids" widget="many2many_tags"/>
                             <field name="description"/>
                             <field name="duration"/>
-                            <field name="cost"/>
-                            <field name="notes"/>
-                            <field name="selected_teeth" />
+                            <field name="total_cost_info"/>
+                            <field name="tooth_completed"/>
+                            <field name="tooth_in_progress"/>
+                            <field name="progress_procedure"/>
+                            <field name="completed_procedure"/>
                         </group>
                     </sheet>
                 </form>
@@ -39,7 +41,7 @@
 
 
         <record id="action" model="ir.actions.act_window">
-            <field name="name">treatment</field>
+            <field name="name">Treatment</field>
             <field name="res_model">dentist.treatment</field>
             <field name="view_mode">tree,form</field>
         </record>
